[gd_scene load_steps=4 format=3 uid="uid://bya5s6afh24y2"]

[ext_resource type="Script" path="res://scripts/SubViewport.gd" id="1_djbh3"]
[ext_resource type="PackedScene" uid="uid://02pucoy7xppp" path="res://scenes/subviewport_aiming_reticle.tscn" id="2_bkany"]
[ext_resource type="PackedScene" uid="uid://cw0t325yducrj" path="res://scenes/controls_help_ui.tscn" id="3_controls"]

[node name="SubViewport" type="SubViewport"]
handle_input_locally = false
audio_listener_enable_3d = false
size = Vector2i(1920, 2160)
render_target_update_mode = 4
script = ExtResource("1_djbh3")

[node name="AimingReticle" parent="." instance=ExtResource("2_bkany")]
visible = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="RealignmentPrompt" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 155.0
offset_right = 400.0
offset_bottom = 275.0
grow_horizontal = 2

[node name="Background" type="ColorRect" parent="UI/RealignmentPrompt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.15)

[node name="Label" type="Label" parent="UI/RealignmentPrompt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Press [LB] to realign"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsHelp" parent="UI" instance=ExtResource("3_controls")]
